# legible-lang

./: CLAUDE.md  Cargo.toml  README.md
benches/: interpreter_bench.rs
src/: lib.rs  main.rs
src/analyzer/: contracts.rs  intent.rs  mod.rs  typechecker.rs
src/errors/: mod.rs  reporter.rs
src/formatter/: canonical.rs  mod.rs
src/interpreter/: builtins.rs  crypto_builtins.rs  db_builtins.rs  environment.rs  evaluator.rs  http_builtins.rs  http_client_builtins.rs  io_builtins.rs  json_builtins.rs  mod.rs  process_builtins.rs  sdl_builtins.rs  value.rs
src/lexer/: mod.rs  scanner.rs  token.rs
src/parser/: arena.rs  ast.rs  mod.rs  parser.rs
tests/: integration.rs
tests/fixtures/valid/: contracts.cl  contracts.expected  fizzbuzz.cl  hello.cl  hello.expected  hello.lbl  mappings.expected  mappings.lbl  optionals.expected  optionals.lbl  pipelines.cl  records.expected  records.lbl  text_ops.expected  text_ops.lbl
