[package]
name = "legible-lang"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[[bin]]
name = "legible"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
miette = { version = "7", features = ["fancy"] }
sdl2 = "0.37"
tiny_http = "0.12"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
pretty_assertions = "1"

[[bench]]
name = "interpreter_bench"
harness = false
